# HappyEngine

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  TODO  extern.hpp  game.cpp  game.hpp  main.cpp
.obsidian/: workspace.json
Devices/: cursor.hpp  devices.hpp
Resources/: fonts.hpp  resources.hpp
Resources/Images/: imager.hpp
Scenes/: scenes.hpp
Scenes/Menu/: mainmenu.cpp  mainmenu.hpp
scripts/: hello.lua
scripts/character/: logic.lua  sprite.lua
